<resources>
    <string name="app_name">iBet</string>
    <string name="login_logo_desc">The iBet logo</string>
    <string name="btn_login">Login</string>
    <string name="link_signup">No account yet? Sign up</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="main_menu_new_bet">New bet</string>
    <string name="main_menu_running_bets">Active bets</string>
    <string name="main_menu_exit">Log Out</string>
    <string name="title_activity_new_bet">NewBetActivity</string>
    <string name="new_bet_contender_hint">Contender</string>
    <string name="new_bet_desc_hint">Description</string>
    <string name="btn_submit_bet">Submit</string>
    <string name="new_bet_info">Enter the necessary data and click the submit button to create a new bet.</string>
    <string name="empty_feed_message">Currently no active bets.</string>
    <string name="bet_feed_desc">The running bets are listed here</string>
    <string name="bet_item_contender_desc">Contender:</string>
    <string name="bet_item_stake_desc">Value:</string>
    <string name="signup_name_hint">Username</string>
    <string name="signup_password_hint">Password</string>
    <string name="btn_signup">Create account</string>
    <string name="link_login">Got an account? Log in</string>
    <string name="new_bet_title_hint">Title</string>
    <string name="new_bet_value_hint">Value</string>
    <string name="active_bets_text">Active bets</string>
    <string name="pending_bets_text">Pending bets</string>
    <string name="bet_detail_accept_btn">Accept</string>
    <string name="bet_detail_decline_btn">Decline</string>
    <string name="bet_detail_info">Waiting for contender to accept the bet..</string>
    <string name="main_menu_btn_history">History</string>
    <string name="login_username_hint">Username</string>
    <string name="bet_detail_title_placeholder">Bet title</string>
    <string name="bet_detail_description_placeholder">Bet description</string>
    <string name="bet_detail_contender_placeholder">Bet contender</string>
    <string name="bet_detail_stake_placeholder">15</string>
    <string name="bet_history_header_text">Bet history</string>
    <string name="bet_history_text">Bet history</string>
    <string name="bet_feed_text">Bet Feed</string>
</resources>
