<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:descendantFocusability="blocksDescendants">

    <TextView
        android:id="@+id/bet_detail_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bet_detail_title_placeholder"
        android:textSize="17sp"
        android:textStyle="bold"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
        android:paddingStart="?android:attr/expandableListPreferredChildPaddingLeft"/>

    <TextView
        android:id="@+id/bet_detail_description"
        android:text="@string/bet_detail_description_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/bet_detail_contender_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/bet_item_desc_margin_side"
            android:layout_marginEnd="@dimen/bet_item_desc_margin_side"
            android:text="@string/bet_item_contender_desc"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/bet_item_layout_margin_bot"/>

        <TextView
            android:id="@+id/bet_detail_contender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/bet_detail_contender_desc"
            android:layout_toEndOf="@id/bet_detail_contender_desc"
            android:layout_marginBottom="@dimen/bet_item_layout_margin_bot"
            android:text="@string/bet_detail_contender_placeholder" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/bet_detail_stake_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/bet_item_desc_margin_side"
            android:layout_marginEnd="@dimen/bet_item_desc_margin_side"
            android:text="@string/bet_item_stake_desc"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/bet_item_layout_margin_bot"/>

        <TextView
            android:id="@+id/bet_detail_stake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/bet_detail_stake_desc"
            android:layout_toEndOf="@id/bet_detail_stake_desc"
            android:layout_marginBottom="@dimen/bet_item_layout_margin_bot"
            android:text="@string/bet_detail_stake_placeholder"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/bet_detail_accept_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bet_detail_accept_btn"
            android:layout_margin="@dimen/bet_detail_button_margin"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <Button
            android:id="@+id/bet_detail_decline_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bet_detail_decline_btn"
            android:layout_margin="@dimen/bet_detail_button_margin"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/bet_detail_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/bet_item_desc_margin_side"
        android:layout_marginEnd="@dimen/bet_item_desc_margin_side"
        android:text="@string/bet_detail_info"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/bet_item_layout_margin_bot"/>

</LinearLayout>
