<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:descendantFocusability="blocksDescendants">

    <TextView
        android:id="@+id/no_bets_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty_feed_message"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/pending_bets_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pending_bets_text"
        android:textSize="24sp"
        android:background="@color/bet_item_desc_bckgrnd" />

    <ListView
        android:id="@+id/list_bet_pending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:descendantFocusability="blocksDescendants"></ListView>

    <TextView
        android:id="@+id/active_bets_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/active_bets_text"
        android:textSize="24sp"
        android:layout_marginTop="@dimen/bet_active_betlist_margin_top"
        android:background="@color/bet_item_desc_bckgrnd" />

    <ListView
        android:id="@+id/list_bet_feed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:descendantFocusability="blocksDescendants"></ListView>

</LinearLayout>